adição de inserts em dev e disponibilizando console h2 para visualização do postgres em dev

--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -3,7 +3,7 @@
 ########## CONFIGURACOES GERAIS ###########################
 nome.perfil=desenvolvimento
 #server.servlet.context-path=/api/v1
-server.port=8082
+server.port=8080
 # desabilita reload automatico devtools
 #spring.devtools.restart.enabled=true
 spring.devtools.add-properties=false
@@ -13,7 +13,7 @@ spring.devtools.add-properties=false
 
 #
 
-########## CONFIGURACOES DO BD MYSQL ###########################
+########## CONFIGURACOES DO BD POSTGRES/MYSQL ###########################
 # parametro de conexao com o banco mysql
 # createDataBase = cria o BD caso nao exista
 # ServerTime = define a localizacao do BD e evita erros
@@ -34,12 +34,14 @@ spring.devtools.add-properties=false
 spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:cuidarapp}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:159951}
-
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
 
+#habilitando console visual e endereco de acesso
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-########## CONFIGURACOES DO BD MYSQL ###########################
+########## CONFIGURACOES DO BD POSTGRES/MYSQL ###########################
 
 #
 
@@ -56,6 +58,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=update
 ## indica o local para salvar desse arquivo
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+spring.jpa.properties.hibernate.default_schema=cuidarapp_schema
 ##gerar o sql  ja formatado.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -92,12 +95,12 @@ spring.flyway.default-schema=cuidarapp_schema
 #
 
 ########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
-##número inicial de conexões
-#spring.datasource.initialSize=50
-##número máximo de conexões
-#spring.datasource.maxActive=200
-##número máximo de conexões inativas
-#spring.datasource.maxIdle=200
-##número mínimo de conexões inativas
-#spring.datasource.minIdle=50
+#número inicial de conexões
+spring.datasource.initialSize=50
+#número máximo de conexões
+spring.datasource.maxActive=200
+#número máximo de conexões inativas
+spring.datasource.maxIdle=200
+#número mínimo de conexões inativas
+spring.datasource.minIdle=50
 ########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
