--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ nome.perfil=padrao
 #spring.profiles.active=producao
 spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
-#server.port=8085
+server.port=8080
 
 # desabilita reload automatico devtools
 #spring.devtools.restart.enabled=true
