--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -23,6 +23,10 @@ spring.datasource.password=${POSTGRES_PASSWORD:159951}
 #DB_URL=jdbc:postgresql://localhost:5432/
 #DB_USERNAME=postgres
 #DB_PASSWORD=159951
+
+#habilitando console visual e endereco de acesso
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 ########## CONFIGURACOES DO BD POSTGRES ###########################
 
 #
