atualizando conexao postgres para deploy

--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -3,7 +3,7 @@
 ########## CONFIGURACOES GERAIS ###########################
 nome.perfil=producao
 #server.servlet.context-path=/api/v1
-server.port=8083
+server.port=8080
 # desabilita reload automatico devtools
 spring.devtools.restart.enabled=false
 #################################################################
@@ -24,9 +24,10 @@ spring.devtools.restart.enabled=false
 #spring.datasource.username=${MYSQLUSER}
 #spring.datasource.password=${MYSQLPASSWORD}
 ## postgres
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+#spring.datasource.url=jdbc:postgresql://postgres:jHhkNnwpx1duT4VKSCG8@containers-us-west-127.railway.app:5889/railway
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:cuidarapp}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:159951}
 
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
