Specifications e endpoint findAllParametros de Medico, Atendente e Local implementados. Removido id dos inserts corrigindo erro no postgres

--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -31,7 +31,7 @@ spring.devtools.add-properties=false
 #spring.datasource.url=jdbc:postgresql://localhost:5432/cuidarapp
 #spring.datasource.username=postgres
 #spring.datasource.password=159951
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:cuidarapp}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5433}/${PGDATABASE:cuidarapp}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:159951}
 # login e senha
@@ -62,6 +62,7 @@ spring.jpa.properties.hibernate.default_schema=cuidarapp_schema
 ##gerar o sql  ja formatado.
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.open-in-view=false
 ########### CONFIGURACOES DA JPA ###########################
 
 #
