--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -11,12 +11,14 @@ spring.devtools.restart.enabled=false
 #
 
 ########## CONFIGURACOES DO BD POSTGRES ###########################
-#spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
-#spring.datasource.username=${PGUSER}
-#spring.datasource.password=${PGPASSWORD}
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:cuidarapp}
-spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:159951}
+#railway
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+# local
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:cuidarapp}
+#spring.datasource.username=${POSTGRES_USER:postgres}
+#spring.datasource.password=${POSTGRES_PASSWORD:159951}
 
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
