configs bd hard code

--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -12,9 +12,9 @@ spring.devtools.restart.enabled=false
 
 ########## CONFIGURACOES DO BD POSTGRES ###########################
 #railway
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:cuidarapp}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:159951}
 # local
 #spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:cuidarapp}
 #spring.datasource.username=${POSTGRES_USER:postgres}
